# rgb-engine

./: Cargo.toml  README.md
examples/: flappy_bird.rs  pink_ripple.rs  randoms.rs  rgb_wave.rs
src/: bounds.rs  effect.rs  key.rs  lib.rs  process.rs  timer.rs
src/effects/: mod.rs  placeholder.rs  random_colors.rs  rgb_wheel.rs  ripple.rs
src/effects/analog/: area.rs  local_press_brightness.rs  mod.rs  velocity.rs
src/effects/perlin/: brightness.rs  mod.rs  perlin_wave.rs  two_color_noise.rs
src/keyboard/: key_delta.rs  matrix.rs  mod.rs  translate.rs
src/processes/: mod.rs  pink_ripple.rs
src/processes/flappy_bird/: bounds.rs  game.rs  mod.rs
