[package]
name = "rgb-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
lerp = "0.5.0"
nalgebra = "0.34.1"
noise = "0.9.0"
palette = "0.7.6"
tween = "2.1.0"
# I'll add this when they update the submodule for it to work again.
# For now I'll just use a custom version of it.
# wooting-rgb = "0.3.5"
wooting-rgb = { path = "/home/luuppi/git-apps/Wooting-RGB/wooting-rgb/" }
wooting-analog-wrapper = { git = "https://github.com/WootingKb/wooting-analog-sdk" }
ringbuffer = "0.16.0"
